syntax = "proto3";

package menuPackage;

service Menu {
    rpc getMenuItems(MenuRequest) returns (MenuResponse);
    rpc addMenuItem(MenuItemInput) returns (MenuItem);
}

message MenuRequest {
    // Add necessary request parameters
}

message MenuItemInput {
    string name = 1;
    double price = 2;
}

message MenuItem {
    string id = 1;
    string name = 2;
    double price = 3;
    // Other fields
}

message MenuResponse {
    repeated MenuItem items = 1;
}
